--- a/webgl-app/index.html
+++ b/webgl-app/index.html
@@ -36,18 +36,15 @@
         <input type="range" id="scale" min="0.1" max="2" step="0.1" value="1">
         <label for="rotation">Rotation Y:</label>
         <input type="range" id="rotation" min="0" max="360" step="1" value="0">
-        <button id="placeButton">Place Object</button>
     </div>
     <script type="module">import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.module.js';
         import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
         import { ARButton } from 'https://cdn.jsdelivr.net/npm/three@0.128.0/examples/jsm/webxr/ARButton.js';
 
-
-        let scene, camera, renderer;
-        let controller, reticle;
+        let scene, camera, renderer, controller, reticle;
         let model, isPlaced = false;
 
-        // Initialize Three.js scene
+        // Initialize scene, camera, and renderer
         scene = new THREE.Scene();
         camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
         renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
@@ -57,21 +54,21 @@
         document.body.appendChild(renderer.domElement);
 
         // AR Button
-        document.body.appendChild(ARButton.createButton(renderer));
+        document.body.appendChild(ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] }));
 
-        // Lights
+        // Lighting
         const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
         scene.add(light);
 
-        // Reticle for placement
-        const geometry = new THREE.RingGeometry(0.15, 0.2, 32).rotateX(- Math.PI / 2);
+        // Reticle for hit testing
+        const geometry = new THREE.RingGeometry(0.15, 0.2, 32).rotateX(-Math.PI / 2);
         const material = new THREE.MeshBasicMaterial({ color: 0xffffff });
         reticle = new THREE.Mesh(geometry, material);
         reticle.matrixAutoUpdate = false;
         reticle.visible = false;
         scene.add(reticle);
 
-        // Load Model (e.g., glTF)
+        // Load model
         const loader = new GLTFLoader();
         loader.load('model.gltf', (gltf) => {
             model = gltf.scene;
@@ -85,9 +82,12 @@
         controller.addEventListener('select', onSelect);
         scene.add(controller);
 
+        let hitTestSource = null;
+        let hitTestSourceRequested = false;
+
         function onSelect() {
             if (!isPlaced) {
-                // Place the model at the reticle's position
+                // Place model at reticle's position
                 model.position.setFromMatrixPosition(reticle.matrix);
                 model.visible = true;
                 isPlaced = true;
@@ -95,15 +95,45 @@
         }
 
         // Animation loop
-        renderer.setAnimationLoop(() => {
-            if (reticle.visible) {
-                reticle.matrix.copy(controller.matrixWorld);
-                reticle.matrix.decompose(reticle.position, reticle.rotation, reticle.scale);
+        renderer.setAnimationLoop((timestamp, frame) => {
+            if (frame) {
+                const referenceSpace = renderer.xr.getReferenceSpace();
+                const session = renderer.xr.getSession();
+
+                if (!hitTestSourceRequested) {
+                    session.requestReferenceSpace('viewer').then((referenceSpace) => {
+                        session.requestHitTestSource({ space: referenceSpace }).then((source) => {
+                            hitTestSource = source;
+                        });
+                    });
+
+                    session.addEventListener('end', () => {
+                        hitTestSourceRequested = false;
+                        hitTestSource = null;
+                    });
+
+                    hitTestSourceRequested = true;
+                }
+
+                if (hitTestSource) {
+                    const hitTestResults = frame.getHitTestResults(hitTestSource);
+                    if (hitTestResults.length) {
+                        const hit = hitTestResults[0];
+                        const referenceSpace = renderer.xr.getReferenceSpace();
+                        const pose = hit.getPose(referenceSpace);
+
+                        reticle.visible = true;
+                        reticle.matrix.fromArray(pose.transform.matrix);
+                    } else {
+                        reticle.visible = false;
+                    }
+                }
             }
+
             renderer.render(scene, camera);
         });
 
-        // UI Controls
+        // UI controls
         const scaleSlider = document.getElementById('scale');
         const rotationSlider = document.getElementById('rotation');
 
