--- a/webgl-app/index.html
+++ b/webgl-app/index.html
@@ -37,7 +37,7 @@
         <label for="rotation">Rotation Y:</label>
         <input type="range" id="rotation" min="0" max="360" step="1" value="0">
     </div>
-    <script type="module">import * as THREE from 'https://unpkg.com/three@0.128.0/build/three.module.js';
+    <script type="module">import * as THREE from 'https://cdnjs.cloudflare.com/ajax/libs/three.js/0.167.0/three.cjs';
         import { GLTFLoader } from 'https://unpkg.com/three@0.128.0/examples/jsm/loaders/GLTFLoader.js';
         import { ARButton } from 'https://unpkg.com/three@0.128.0/examples/jsm/webxr/ARButton.js';
 
