--- a/webgl-app/index.html
+++ b/webgl-app/index.html
@@ -24,11 +24,11 @@
         </div>
     </div>
     <script>var buildUrl = "Build";
-        var loaderUrl = buildUrl + "/a.loader.js";
+        var loaderUrl = buildUrl + "/b.loader.js";
         var config = {
-            dataUrl: buildUrl + "/a.data",
-            frameworkUrl: buildUrl + "/a.framework.js",
-            codeUrl: buildUrl + "/a.wasm",
+            dataUrl: buildUrl + "/b.data",
+            frameworkUrl: buildUrl + "/b.framework.js",
+            codeUrl: buildUrl + "/b.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "DefaultCompany",
             productName: "WebGL Test AR",
